Fix command to run JavaFX application
and the readme curse saga continues